--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mi pagina web 1.0</title>
 </head>
     <p>
-        Hola a todos este es mi sitio web que recientemente inicie para el curso de desarrollo web en platzi
+        Hola a todos este es mi sitio web que recientemente inicie para el curso de desarrollo web en platzi, saludos!
     </p>
 </body>
 </html>
