--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
     <p>
         Hola a todos este es mi sitio web que recientemente inicie para el curso de desarrollo web en platzi, saludos!
-        este es mi inicio 
+        este es mi inicio <<<<
     </p>
 </body>
 </html>
